--- a/footerStyle.css
+++ b/footerStyle.css
@@ -5,25 +5,17 @@ footer {
 .footerInfo {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
+    padding: 27.5px 11.5%;
     align-items: center;
     background-color: #4C5866;
+    justify-content: space-between;
 }
 
 .footerMessengers {
     display: flex;
-    flex-basis: 50%;
     justify-content: end;
-    gap: 8%;
-}
-
-.footerInfo * {
-    margin: 15px 0;
-}
-
-footer p {
-    padding: 0;
-    margin: 0;
+    gap: 29px;
+    flex-basis: 70%;
 }
 
 .copyright {
